--- a/0introduction.tex
+++ b/0introduction.tex
@@ -58,11 +58,12 @@ We denote the set of all possible relations over a relation name $R$ by $\inst(R
 
 \begin{defn}[Valuation]
 For a given set $V \subseteq \textbf{var}$ of free variables, a function $\nu:~V~\to~\textbf{dom}$ is called a \emph{valuation} of $V$.
-Valuation is naturally extended to $\textbf{dom} \cup \textbf{var}$ as an identity function on constants. It is also extended to a function from tuples over $\textbf{dom} \cup \textbf{var}$ to tuples over $\textbf{dom}$ by applying the valuation to each element of the tuple.
 \end{defn}
 
+Valuation is naturally extended to $\textbf{dom} \cup \textbf{var}$ as an identity function on constants. It is also extended to a function from tuples over $\textbf{dom} \cup \textbf{var}$ to tuples over $\textbf{dom}$ by applying the valuation to each element of the tuple.
+
 \begin{exmp}
-Let $\sigma = (\{\textsc{Edge}, \textsc{Parent}\}, ar)$ be a database schema such that $ar(\textsc{Edge}) = 3, ar(\textsc{Parent}) = 2$. 
+Let $\sigma = (\{\textsc{Edge}, \textsc{Parent}\}, ar)$, where  $ar(\textsc{Edge}) = 3, ar(\textsc{Parent}) = 2$, be a database schema. 
 
 \relat{Edge}{(1, 2, 17)} and \relat{Edge}{(1, 3, 5)} are facts over \relat{Edge}{}, whereas \relat{Parent}{(Alice, Bob)} and \relat{Parent}{(Bob, Chris)} are facts over \relat{Parent}{}. 
 
@@ -70,7 +71,7 @@ $I = \{\relat{Edge}{(1, 2, 17)}, \relat{Edge}{(1, 3, 5)}\}$ is a relation instan
 
 $\textbf{K} = \{\relat{Edge}{(1, 2, 17)}, \relat{Parent}{(Alice, Bob)}, \relat{Parent}{(Bob, Chris)}\}$ is a database instance over~$\sigma$.
 
-For variables $x, y, z \in \textbf{dom}$, $\nu$ such that $\nu(x) = 1, \nu(y) = 7, \nu(z) = Alice$ is a valuation of $\{x, y, z\}$. For constants $\nu$ is identity: $\nu(Bob) = Bob, \nu(7) = 7$. $\nu$ can be applied to tuples: $\nu(x, Bob, 9, z) = (1, Bob, 9, Alice)$.
+For variables $x, y, z \in \textbf{dom}$, $\nu$ such that $\nu(x) = 1, \nu(y) = 7, \nu(z) = Alice$ is a valuation of $\{x, y, z\}$. For constants $\nu$ is by definition identity: $\nu(Bob) = Bob, \nu(7) = 7$. As natural extension, $\nu$ can be applied to tuples: $\nu(x, Bob, 9, z) = (1, Bob, 9, Alice)$.
 
 \end{exmp}
 
@@ -78,7 +79,24 @@ For variables $x, y, z \in \textbf{dom}$, $\nu$ such that $\nu(x) = 1, \nu(y) = 
 If $f$ is a function $f: D \to D$ and $f(x) = x$ for an $x \in D$, then $x$ is called a \emph{fix-point} of $f$.
 \end{defn}
 
-\pomysl{Może tutaj przenieść definicje partial order i pre order}
+\begin{defn}[Pre-order]
+A binary relation $\le$ over a set $P$ is a \emph{pre-order} if it is reflexive and transitive, i.e.\ for each $x, y, z \in P$ the following properties are satisfied:
+\begin{itemize}
+\item $x \le x$
+\item if $x \le y$ and $y \le z$ then $x \le z$
+\end{itemize}
+\end{defn}
+
+\begin{defn}[Partial order]
+A binary relation $\le$ over a set $P$ is a \emph{partial order} if it is reflexive, antisymmetic and transitive, i.e.\ for each $x, y, z \in P$ the following properties are satisfied:
+\begin{itemize}
+\item $x \le x$
+\item if $x \le y$ and $y \le x$ then $x = y$
+\item if $x \le y$ and $y \le z$ then $x \le z$
+\end{itemize}
+\end{defn}
+
+\todo{example pre and partial orders}
 
 \begin{defn}[Monotonicity]
 Function $f: D \to C$ is monotone with respect to pre-order $\sqsubseteq$ if $x \sqsubseteq y \rightarrow f(x) \sqsubseteq f(y)$ for each $x, y \in D$.
